fixed scroll problem on mobile

--- a/stylesheet-tsuu.css
+++ b/stylesheet-tsuu.css
@@ -6,6 +6,8 @@ font-family: 'Poppins', sans-serif;
 box-sizing: border-box;
 }
 html{
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   scroll-behavior: smooth;
   -webkit-text-size-adjust: auto;
 }
